# image_processor

./: CMakeLists.txt  application.h  cmd_arg_parser.cpp  exceptions.cpp  filter_bulge.cpp  filter_bulge.h  filter_crop.cpp  filter_crystallize.cpp  filter_edge_detection.cpp  filter_gaussian_blur.cpp  filter_grid.cpp  filter_grid.h  filter_hexagonal_pixellate.cpp  filter_hexagonal_pixellate.h  filter_negative.cpp  filter_negative.h  filter_pipeline.cpp  filter_pipeline_factory.cpp  filter_pipeline_factory.h  filter_sharpening.cpp  filter_sharpening.h  filter_vignetting.cpp  image.h  readme.md  unity_tests.cpp
src/: application.cpp  cmd_arg_parser.h  exceptions.h  filter_base.h  filter_crop.h  filter_crystallize.h  filter_edge_detection.h  filter_gaussian_blur.h  filter_grayscale.cpp  filter_grayscale.h  filter_pipeline.h  filter_pipeline_factory.cpp  filter_vignetting.h  image.cpp  image_processor.cpp  pixel.h  unity_tests.cpp
